# i2c

./: CMakeLists.txt  LICENSE  Makefile  README.md  index.html  params.json
include/rnr/: i2c-dev.h  i2c.h
make/: Pkg.mk
make/deb-dev/: control
make/deb-doc/: control
make/deb-src/: control
src/cmds/: README.md
src/libi2c/: i2ccom.c
stylesheets/: styles.css
